Fixed spacing issues in CoverCardList when flex box is wrapped

--- a/src/components/CoverCardList/CoverCardList.module.css
+++ b/src/components/CoverCardList/CoverCardList.module.css
@@ -1,8 +1,8 @@
 .cardList {
     display: flex;
     justify-content: space-around;
+    align-items: center;
     flex-direction: column;
-    flex-wrap: wrap;
   }
 
 .cardList > div {
@@ -14,8 +14,8 @@
       width: 100%;
       flex-wrap: wrap;
       flex-direction: row;
-      justify-content: space-around;
       align-content: stretch;
+      row-gap: 32px;
     }
 
     .cardList > div {
